[gd_scene load_steps=6 format=3 uid="uid://bd71n5ug7tb2m"]

[ext_resource type="Script" path="res://_scripts/bullet.gd" id="1_oxxnv"]
[ext_resource type="Texture2D" uid="uid://cjgu7aduyaa1s" path="res://Pixel Shmup/Tiles/tile_0000.png" id="2_h54gu"]
[ext_resource type="PackedScene" uid="uid://c2wa5yq38k0n2" path="res://_scenes/hit_box_component.tscn" id="3_t06gg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hltvw"]
size = Vector2(4, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ybjlj"]
size = Vector2(10, 18)

[node name="Bullet" type="RigidBody2D" groups=["Projectile"]]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_oxxnv")
force = 900.0
damage = 1.0

[node name="BulletSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_h54gu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_hltvw")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="HitBoxComponent" parent="." instance=ExtResource("3_t06gg")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
shape = SubResource("RectangleShape2D_ybjlj")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="HitBoxComponent" to="." method="_on_hit_box_component_area_entered"]
